[gd_scene load_steps=8 format=3 uid="uid://cmxec3oji0a6f"]

[ext_resource type="Script" path="res://Cards/card.gd" id="1_1mpli"]
[ext_resource type="Script" path="res://Cards/card_config.gd" id="2_g2cg4"]

[sub_resource type="Resource" id="Resource_fg52l"]
script = ExtResource("2_g2cg4")
card_type = 0
pixel_size = 0.0025
image_offset = Vector2(0, 0)
card_name = "Rock"
card_description = ""
card_value = -1

[sub_resource type="BoxShape3D" id="BoxShape3D_awv88"]
size = Vector3(0.5, 0.01, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o152c"]
size = Vector3(0.5, 0.01, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_057rh"]
resource_local_to_scene = true

[sub_resource type="SystemFont" id="SystemFont_wueyw"]
font_names = PackedStringArray("Chiller")

[node name="Card" type="AnimatableBody3D"]
script = ExtResource("1_1mpli")
card_config = SubResource("Resource_fg52l")

[node name="CardColShape" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_awv88")

[node name="Visuals" type="Node3D" parent="."]

[node name="CardMesh" type="MeshInstance3D" parent="Visuals"]
mesh = SubResource("BoxMesh_o152c")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_057rh")

[node name="CardNameLabel" type="Label3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.01, -0.425)
pixel_size = 0.002
text = "Card Name"
font = SubResource("SystemFont_wueyw")
autowrap_mode = 3
width = 200.0

[node name="CardImageSprite" type="Sprite3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.01, -0.2)
pixel_size = 0.0025
region_rect = Rect2(653, 165, 7, 6)

[node name="CardDesc" type="Label3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.01, 0.25)
pixel_size = 0.002
text = "Card Description Here"
font = SubResource("SystemFont_wueyw")
autowrap_mode = 3
width = 230.0
